--- a/index.html
+++ b/index.html
@@ -5,67 +5,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Spotify Clone</title>
-    <link rel="stylesheet" href=".\styles\style.css">
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   
-  <body>
-    <nav>
-      <img src="images\spotify-logo.png"/>
-        <ul>
-          <li>Premium</li>
-          <li>Discover</li>
-          <li>Help</li>
-          <li>Download</li>
-        </ul>
-      </nav>
-    
-      <header>
-        <img src="images\landing.jpg"/>
-        <h1>Music for everyone.</h1>
-        <p>Spotify is now free on mobile, tablet and computer. Listen to the
-          right music, wherever you are.</p>
-    </header>
+<body>
+    <!--Barra de hasta arriba-->
+  <nav id="nav-bar">
+    <img class="imagenuno" src="images/spotify-logo.png" alt="spotifylogo">
+    <ul class="nav-bar-ul">
+      <li>Premium</li>
+      <li>Discover</li>
+      <li>Help</li>
+      <li>Download</li>
+    </ul>
+  </nav>
+<!--Imagen del concierto-->
+  <section class="grande">
+  <h1 class="music">MUSIC FOR EVERYONE</h1>
+  <p class="blanco">Spotify is now free on mobile, tablet and computer.</p>
+  <p class="blanco">Listen to the right music, wherever you want</p>
+  </section>
 
-    <section>
-      <h2>What’s on Spotify?</h2>
-      <article>
-        <img src="images\music-icon.png"/>
-        <h3>Millions of Songs</h3>
-        <p>There are millions of songs on Spotify</p>
-      </article>
-
-      <article>
-        <img src="images\high-quality-icon.png"/>
-        <h3>HD Music</h3>
-        <p>Listen to music as if you were listening live</p>
-      </article>
-      
-      <article>
-        <img src="images\devices-icon.png"/>
-        <h3>Stream Everywhere</h3>
-        <p>Stream music on your smartphone, tablet or computer</p>
-      </article>
-    </section>
-
-    <section>
-      <img src="images\spotify-app.jpg"/>
-      <img src="images\spotify-icon-white.png"/>
-      <h2>It’s as yeezy as Kanye West.</h2>
-      <div>
-        <h3>Search</h3>
-        <p>Know what you want to listen to? Just search and hit play.</p>
-      </div>
-      <div>
-        <h3>Browse</h3>
-        <p>Check out the latest charts, brand new releases and great playlists for right now.</p>
-      </div>
-      <div>
-        <h3>Discover</h3>
-        <p>Enjoy new music every Monday with your own personal playlist. Or sit back and enjoy Radio.</p>
-      </div>
-
-    </section>
-
-  
-  </body>
+    <!--Tercera section-->
+  <section id="centro">
+    <h1 class="subrayado">What’s on Spotify?</h1>
+    <div class="tercera">
+      <article class="logos">
+      <img src="images/music-icon.png" alt="audiologo">
+      <h3>Millions of Songs</h3>
+      <p class="minitexto">
+      There are millions of songs on Spotify
+    </p>
+    </article>
+    <article class="logos">
+      <img src="images/high-quality-icon.png" alt="qualitylogo">
+      <h3>HD Music</h3>
+      <p class="minitexto">Listen to music as if you were listening live </p>
+    </article>
+    <article class="logos">
+      <img src="images/devices-icon.png" alt="deviceslogo">
+      <h3>Stream Everywhere</h3>
+      <p class="">Stream music on your smartphone, tablet or computer</p>
+    </article>
+    </div>
+  </section>
+<!--Cuarta sección-->
+  <footer class="ahora">
+    <div class="cuarta">
+    <article class="ultimo">
+      <h4 class="kani">It’s as yeezy as Kanye West.</p>
+      <h2>Search</h2>
+      <p>Know what you want to listen to? Just search and hit play. </p>
+      <h2> Browse </h2>
+      <p>Check out the latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
+      own personal playlist. Or sit back and enjoy Radio.</p>
+      <h3>Discover</h3>
+      <p>
+      Enjoy new music every Monday
+      with your own personal playlist.
+      Or sit back and enjoy Radio
+      </p>
+    </article>
+    <img class="kaniss" src="images/spotify-app.jpg">
+    </div>
+    <img class="spo" src="images/spotify-icon-white.png">
+  </footer>
+</body>
 </html>
